--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.548.0",
