--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "axios": "^1.3.4",
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
@@ -30,6 +30,7 @@
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-is": "^19.2.0",
